--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-*{
+/* *{
   margin: 0;
   padding: 0;
 }
@@ -13,7 +13,7 @@ body {
 }
 body {
   font-family: Roboto, Helvetica, Arial, sans-serif;
-}
+} */
 
 /* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
