pop model added

--- a/src/cssComp/Navsection.css
+++ b/src/cssComp/Navsection.css
@@ -8,3 +8,28 @@
     background-color: #0d6efd;
     color: #fff;
 }
+
+.cart_btn{
+    background: none;
+    padding: 0;
+    border: none;
+    
+}
+.cart_count{
+   
+       height: 30px;
+       padding: 15.2px 7.8px;
+       font-size: 27px;
+       border-radius: 26px;
+       transform: perspective(0px) translate(-12px) rotate(0deg) scale(0.50);
+       transform-origin: top;
+       /* padding-right: 0; */
+       padding-top: 0.2px;
+       /* padding-left: 0.2px; */
+       text-align: center;border-width: 48px;
+       
+}
+.cart_btn i{
+    color: #fff;
+    margin-left: 15px;
+}
